color contrast fix

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -29,7 +29,7 @@ h4,
 h5,
 h6 {
   font-family: var(--heading-font);
-  color: var(--primary-color);
+  color: var(--nav-background-color);
 }
 
 /* Header */
@@ -66,7 +66,7 @@ p {
   left: 0;
   right: 0;
   text-align: center;
-  color: var(--primary-color);
+  color: var(--nav-link-color);
   font-size: 40px;
 }
 
@@ -89,7 +89,7 @@ article {
   width: 60%;
   margin: 0 auto;
   height: 30%;
-  color: var(--primary-color);
+  color: var(--nav-link-color);
 }
 
 .hero article img {
@@ -119,6 +119,7 @@ header nav {
   padding: 1rem;
   font-size: x-large;
   margin-left: 10%;
+  color: var(--nav-link-color);
 }
 
 nav a {
@@ -131,12 +132,14 @@ nav a {
 
 nav a:hover {
   color: var(--nav-hover-link-color);
-  background-color: var(--accent2-color);
+  background-color: var(--secondary-color);
 }
 
-nav a:link,
+nav a:link {
+  color: var(--nav-link-color);
+}
 nav a:visited {
-  color: var(--primary-color);
+  color: var(--accent2-color);
 }
 
 /* section History */
@@ -171,7 +174,7 @@ nav a:visited {
   }
 
   figcaption {
-    color: var(--primary-color);
+    color: var(--nav-link-color);
     font: italic smaller sans-serif;
     padding: 3px;
     text-align: center;
@@ -181,13 +184,16 @@ nav a:visited {
 /* footer */
 
 footer {
-  background-color: var(--accent1-color);
-  text-align: center;
+  background-color: var(--nav-background-color);
+  color: var(--nav-link-color);
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
 }
 
 .sociallinks {
   display: flex;
-  justify-content: center;
+  justify-self: right;
 }
 
 section {
